--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">News_App</string>
+
+    //String for the empty view, when no news items are found.
+    <string name="empty_view">No news articles found.</string>
+
+    //String for the case, when there is no internet connection.
+    <string name="no_internet_connection">No internet connection.</string>
 </resources>
